Removed background color

--- a/src/styles/searchBook.scss
+++ b/src/styles/searchBook.scss
@@ -9,9 +9,9 @@
 }
 
 .default-container {
-  background-color: pink;
+  //   background-color: pink;
 
   .container {
-    background-color: indigo;
+    // background-color: indigo;
   }
 }
