--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -12,7 +12,12 @@
 
 .new {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  margin: 0 auto;
+  padding: 0 1.2rem;
+  width: 100%;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 1em;
+  margin-bottom: 2rem;
 
   .card {
     margin: 0 auto;
@@ -20,8 +25,44 @@
 
     .card-container {
       display: flex;
-      // width: 30%;
-      gap: 1rem;
+      width: 100%;
+      height: 100%;
+      margin: 0 auto;
+      justify-content: left;
+      align-items: left;
+      padding: 0.7rem;
+      // background-color: #fafafa;
+      gap: 0.7rem;
+      z-index: 0;
+      overflow: hidden;
+      border: 1px solid #e2e2e2;
+
+      &:hover {
+        transition: all 0.2s ease-out;
+        box-shadow: 0 4px 8px rgba(38, 38, 38, 0.2);
+        top: -4px;
+        border: 1px solid #ccc;
+        background-color: white;
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        top: -16px;
+        right: -16px;
+        // background: #00838d;
+        height: 32px;
+        width: 32px;
+        border-radius: 32px;
+        transform: scale(2);
+        transform-origin: 50% 50%;
+        transition: transform 0.15s ease-out;
+      }
+
+      &:hover::before {
+        transform: scale(2.15);
+      }
     }
   }
 }
