Add searchBook styles

--- a/src/styles/searchBook.scss
+++ b/src/styles/searchBook.scss
@@ -9,9 +9,6 @@
 }
 
 .default-container {
-  //   background-color: pink;
-
-  .container {
-    // background-color: indigo;
-  }
+  background-color: #fff;
+  margin-bottom: 2rem;
 }
