--- a/src/components/styles/card.scss
+++ b/src/components/styles/card.scss
@@ -18,6 +18,8 @@
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 1em;
   margin-bottom: 2rem;
+  position: relative;
+  overflow: hidden;
 
   .card {
     margin: 0 auto;
@@ -31,7 +33,6 @@
       justify-content: left;
       align-items: left;
       padding: 0.7rem;
-      // background-color: #fafafa;
       gap: 0.7rem;
       z-index: 0;
       overflow: hidden;
@@ -51,7 +52,6 @@
         z-index: -1;
         top: -16px;
         right: -16px;
-        // background: #00838d;
         height: 32px;
         width: 32px;
         border-radius: 32px;
